--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="Innovesta Logo" id="club-logo">
+        <img src="innovestalogo.png" id="club-logo">
         <h1>Welcome to InnoCoin</h1>
     </header>
 
@@ -21,13 +21,13 @@
 
     <div id="coin-container">
         <div id="coin">
-            <img src="logo.png" alt="Club Logo" id="coin-logo">
+            <img src="innovestalogo.png" id="coin-logo">
         </div>
     </div>
 
     <h2>Your Balance: <span id="balance">0</span> InnoCoins</h2>
     
-    <button onclick="spendCoins(20)">Play Game (20 InnoCoins)</button>
+    <button onclick="spendCoins(0)">Play Game (0 InnoCoins)</button>
 
     <h2>Leaderboard</h2>
     <ul id="leaderboard"></ul>
